force-app/main/default/objects/ssot__EngagementAnalysisTextDirectFeedback__dlm/fields/ssot__EngagementAnalysisTextId__c.field-meta.xml
<CustomField>
    <fullName>ssot__EngagementAnalysisTextId__c</fullName>
    <label>Engagement Analysis Text Id</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EngagementAnalysisTextId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>