force-app/main/default/objects/ssot__EngagementAnalysisTextDirectFeedback__dlm/fields/ssot__rel_1718546704058_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1718546704058_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EngagementAnalysisTextDirectFeedback_rel</label>
    <referenceTo>ssot__EngagementAnalysisText__dlm</referenceTo>
    <relationshipLabel>EngagementAnalysisTextDirectFeedback_rel</relationshipLabel>
    <relationshipName>rel_1718546704058_end</relationshipName>
    <type>Lookup</type>
</CustomField>