force-app/main/default/objects/ssot__EngagementAnalysisTextDirectFeedback__dlm/fields/ssot__TextAnalysisFeedbackType__c.field-meta.xml
<CustomField>
    <fullName>ssot__TextAnalysisFeedbackType__c</fullName>
    <label>Text Analysis Feedback Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TextAnalysisFeedbackType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>