force-app/main/default/objects/ssot__EngagementAnalysisTextDirectFeedback__dlm/fields/ssot__TextAnalysisFeedbackValue__c.field-meta.xml
<CustomField>
    <fullName>ssot__TextAnalysisFeedbackValue__c</fullName>
    <label>Text Analysis Feedback Value</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TextAnalysisFeedbackValue</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>